<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dp_2"
        android:text="@string/dummy_congration"
        android:textColor="@color/colorPrimary1" />

    <ImageView
        android:id="@+id/offerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/dp_20"
        app:srcCompat="@mipmap/basket" />

    <TextView
        android:id="@+id/offerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offerImage"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/dummy_offer"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/offerDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offerTitle"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/dummy_offerDate"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_8" />

    <TextView
        android:id="@+id/downloadTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offerDate"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/downloadticket_bg"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/downloadTickets"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>