<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/parentLayout"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvBasicInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:padding="@dimen/dp_5"
        android:text="@string/chatHelpText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/visitorNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tvBasicInfo"
        app:layout_constraintStart_toStartOf="@id/tvBasicInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvBasicInfo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/chatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visitorName"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/visitorEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/visitorNameLayout"
        app:layout_constraintRight_toRightOf="@+id/visitorNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/visitorNameLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chatEmail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/visitorNameLayout"
        app:layout_constraintRight_toRightOf="@+id/visitorNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/visitorEmailLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chatPhone"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/beginChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/beginChat"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
