<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_close" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/capturedImage"
                android:layout_width="@dimen/captureImageWidth"
                android:layout_height="@dimen/captureImageHeight"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_coffee" />

            <TextView
                android:id="@+id/tvTakePhotoMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/takePhoto" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageUploadSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_upload_complete"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/uploadingProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/WhiteProgressBar"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_upload"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/upload" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_camera_unlock"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/camera" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/submissionSuccessFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/messageUploadSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/onImageUpload"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sareImageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/shareImage"
                app:layout_constraintLeft_toLeftOf="@+id/messageUploadSuccess"
                app:layout_constraintTop_toBottomOf="@+id/messageUploadSuccess" />

            <ImageView
                android:id="@+id/facebookShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@drawable/ic_facebook_share"
                app:layout_constraintLeft_toRightOf="@+id/sareImageText"
                app:layout_constraintTop_toBottomOf="@+id/messageUploadSuccess" />

            <ImageView
                android:id="@+id/instagramShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:src="@drawable/ic_instagram_share"
                app:layout_constraintLeft_toRightOf="@+id/facebookShare"
                app:layout_constraintTop_toBottomOf="@+id/messageUploadSuccess" />

            <Button
                android:id="@+id/tvDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/downloadticket_bg"
                android:gravity="center"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instagramShare" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</LinearLayout>