<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.puma.nextwhere.activity.WaitMessageActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:scaleType="centerInside"
        android:src="@mipmap/img_logo" />

    <LinearLayout
        android:id="@+id/ll_hey_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/wait_hey"
            android:textAlignment="viewEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="Federico"
            android:textAlignment="viewStart"
            android:textColor="#F50503"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_message_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:paddingTop="20dp"
        android:text="@string/wait_message_1"
        android:textAlignment="center"
        android:textColor="#378596"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_message_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="@string/wait_message_2"
        android:textColor="#378596"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_message_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="@string/wait_message_3"
        android:textAlignment="center"
        android:textColor="#378596"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/ll_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wait_days"
                android:textAlignment="center"
                android:textColor="#60DBBC" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/wait_hours"
                android:textAlignment="center"
                android:textColor="#60DBBC" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wait_minutes"
                android:textAlignment="center"
                android:textColor="#60DBBC" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_clock_numbers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_count_down_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_colon_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_colon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/tv_count_down_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#0F7E96"
                android:textSize="46sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:gravity="center"
        android:onClick="logOut()"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="LOG OUT"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

</RelativeLayout>
